--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
 env/
 app.sock
-db.sqlite3
+
+# Django #
+*.log
+*.pot
+*.pyc
+__pycache__
+media
+
+# Visual Studio Code # 
+.vscode/* 
+!.vscode/settings.json 
+!.vscode/tasks.json 
+!.vscode/launch.json 
+!.vscode/extensions.json 
+.history
+
