--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 asgiref==3.2.7
 astroid==2.3.3
-beautifulsoup4==4.6.0
+beautifulsoup4==4.8
 boto3==1.12.38
 botocore==1.15.38
 certifi==2019.11.28
@@ -31,7 +31,7 @@ sqlparse==0.3.1
 typed-ast==1.4.1
 Unidecode==1.1.1
 urllib3==1.25.8
-wagtail==2.8.1
+wagtail==2.9.
 webencodings==0.5.1
 Willow==1.3
 wrapt==1.11.2
